# grabber_bot

./: pyproject.toml  requirements.txt
src/app/: __main__.py  cookies.txt
